Formatting using checkstyle autoformatter